--- a/nms/pom.xml
+++ b/nms/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>com.walrusone.skywarsreloaded</groupId>
         <artifactId>skywarsreloaded-parent</artifactId>
-        <version>3.5-SNAPSHOT</version>
+        <version>4.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>skywarsreloaded-nms</artifactId>
@@ -23,6 +23,7 @@
         <module>v1_10_R1</module>
         <module>v1_11_R1</module>
         <module>v1_12_R1</module>
+        <module>v1_13_R2</module>
         <module>aggregated</module>
     </modules>
 
