Fix MapData Duplication Fix
Fixed MapData duplication caused by refresh command.

--- a/plugin/src/main/resources/messages.yml
+++ b/plugin/src/main/resources/messages.yml
@@ -55,10 +55,10 @@ maps:
   listResult: '&F{filename} - {displayname}: {status}'
   minplayer: '&bThe minimum number of players for map {mapname} has been set to {min}!'  
   name: '&bThe display name for map {mapname} has been set to {displayname}!' 
-  refreshed: '&bMap data has been reloaded!'
-  registered: '&bMap {mapname} has been successfully registered!'
-  unregistered: '&bMap {mapname} has been successfully unregistered!'
-  saved: '&bMap {mapname} has been Saved!'
+  refreshed: '&bMap data for {mapname} &bhas been reloaded!'
+  registered: '&bMap {mapname} &bhas been successfully registered!'
+  unregistered: '&bMap {mapname} &bhas been successfully unregistered!'
+  saved: '&bMap {mapname} &bhas been Saved!'
   register-reminder: '&bReregister the map to have your changes updated!'
   changename: '&bEnter the new display name in chat, including color codes'
   changecreator: '&bEnter the new creator in chat, including color codes'
@@ -80,7 +80,6 @@ party:
   invited: '&bYou invited &6{player} &bto join your party!'
   pendingInvite: '&6{player} &calready has a pending party invite!'
   couldnotfind: '&cCould not find player named &6{player}&c!'
-  alreadyinparty: '&cYou are already in a party!'
   noinvite: '&cYou are not currently invited to a party!'
   youjoined: '&bYou joined the party {partyname}!'
   youdeclined: '&bYou declined to join the party {partyname}!'
@@ -459,7 +458,7 @@ helpList:
     list: '&a/swmap list    &e- &2Lists available maps'
     minimum: '&a/swmap min &e[mapname] [min] &e- &2Sets the minimum number of players for the map named [mapname]'
     name: '&a/swmap name &e[mapname] [name] &e- &2Sets the display name for the map named [mapname]'
-    refresh: '&a/swmap refresh &e- &2Reloads the maps data file.'
+    refresh: '&a/swmap refresh &e[mapname] &e- &2Reloads the maps data file.'
     register: '&a/swmap register &e[mapname] &e- &2Registers a map named &e[mapname]'
     unregister: '&a/swmap unregister &e[mapname] &e- &2Unregisters a map named &e[mapname]'
     save: '&a/swmap save &e[mapname] &e- &2Saves a open map named &e[mapname]'
