Added Show Health option for Scoreboard

--- a/plugin/src/main/resources/config18.yml
+++ b/plugin/src/main/resources/config18.yml
@@ -12,6 +12,7 @@ displayPlayerLevelOnXpBar: true
 enabledLobbyGuard: false
 economyEnabled: false
 game:
+  showHealth: true
   snowballDamage: 1
   eggDamage: 1
   ecoForWin: 5
