--- a/plugin/src/main/resources/messages.yml
+++ b/plugin/src/main/resources/messages.yml
@@ -266,10 +266,10 @@ items:
   chest-scavenger: '&bSCAVENGER'
   health-item: '&bHEALTH VOTING MENU'
   health-random: '&bRANDOM'
-  health-five: '&b5 HEARTS'
-  health-ten: '&b10 HEARTS'
-  health-fifteen: '&b15 HEARTS'
-  health-twenty: '&b20 HEARTS'
+  health-five: '&b5 &4❤'
+  health-ten: '&b10 &4❤'
+  health-fifteen: '&b15 &4❤'
+  health-twenty: '&b20 &4❤'
   time-item: '&bGAME TIME VOTING MENU'
   time-random: '&bRANDOM'
   time-dawn: '&bDAWN'
