--- a/plugin/src/main/resources/config112.yml
+++ b/plugin/src/main/resources/config112.yml
@@ -13,6 +13,7 @@ displayPlayerLevelOnXpBar: true
 enabledLobbyGuard: false
 economyEnabled: false
 game:
+  showHealth: true
   snowballDamage: 1
   eggDamage: 1
   ecoForWin: 5
