XP Restore in lobby for Multiworld Setups

--- a/plugin/src/main/resources/messages.yml
+++ b/plugin/src/main/resources/messages.yml
@@ -229,7 +229,7 @@ menu:
   spectategame-menu-title: '&5Spectate Game Menu'
   spectatesinglegame-menu-title: '&5Spectate SkyWars Menu'
   spectateteamgame-menu-title: '&5Spectate Team SkyWars Menu'
-  kit-section-mnenu: '&5SELECT YOUR KIT'
+  kit-section-menu: '&5SELECT YOUR KIT'
   kit-voting-menu: '&5VOTE FOR KIT'
   chest-voting-menu: '&5VOTE FOR CHEST TYPE'
   time-voting-menu: '&5VOTE FOR GAME TIME'
