--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -16,6 +16,10 @@
 
     <repositories>
         <repository>
+            <id>dmulloy2-repo</id>
+            <url>http://repo.dmulloy2.net/nexus/repository/public/</url>
+        </repository>
+        <repository>
             <id>placeholderapi-repo</id>
             <url>http://repo.extendedclip.com/content/repositories/placeholderapi/</url>
         </repository>
