Center Chests Added
Includeds new ymls for center chests.
Changed setstat command to stat which uses an additional arguement of add, remove, or set to alter the player stat.

--- a/plugin/src/main/resources/messages.yml
+++ b/plugin/src/main/resources/messages.yml
@@ -32,6 +32,7 @@ command:
   spawnset: '&aSkyWars spawn set at your current location!'
   setstat: '&a{player} {stat} was set to {amount} in SkyWars!'
   must-be-int: '&cStat value must be a integer!'
+  method-must-be: '&cThe method for the stat must be "set", "add", or "remove"'
   invalid-effect: '&cThat is not a valid effect!'
   invalid-color: '&cThat is not a valid color!'
   invalid-sound: '&cThat is not a valid sound!'
@@ -67,7 +68,9 @@ maps:
   spawnRemoved: '&bSpawn #{num} removed from  {mapname}'
   deathSpawnRemoved: '&bDeathMatch Spawn #{num} removed from  {mapname}'
   specSpawn: '&bSpecator Spawn set to your location for {mapname}'
+  chestPlacementType: '&bYou are now placing {type} chests on {mapname}'
   addChest: '&bChest added to map {mapname}'
+  addCenterChest: '&bCenter Chest added to map {mapname}'
   removeChest: '&bChest removed from map {mapname}'
 party:
   memberbusy: '&cYour party could not join a game because &6{player} &cwas busy!'
@@ -120,11 +123,12 @@ error:
   cooldown: '&4You cant use your taunt for another &e{timeleft}!'
   chestpercent: '&4[percentage] must be an integer between 1 and 100!'
   position: '&4[position] must be an integer between 0 and 35!'
-  chesttype: '&4[chesttype] must be either "basic", "normal", "op", or "crate"'
+  chesttype: '&4[chesttype] must be either "basic", "basiccenter", "normal", "normalcenter", "op", "opcenter", or "crate"'
   chestmethod: '&4[method] must be either "hand" or "inv"'
   schematicsInUse: '&4Map commands are disabled when using schematics!'
   nospawn: '&4Spawn must be set to create or edit maps!'
   nopermission: '&4You do not have permission to use the voting menu!'
+  elochange: '&cPlayer ELO cannot be changed while player is in game!'
 game:
   command-disabled-spec: '&4That command is disabled while Spectating!'
   command-disabled: '&4That command is disabled during SkyWars matches!'
@@ -432,7 +436,7 @@ helpList:
     updatetop: '&a/sw updatetop &e - &2Forces a leaderboard update'
     chestadd: '&a/sw chestadd &e[chesttype] [method] [percentage] &e- &2Adds item(s) in hand/inventory to the chesttype with the assigned percentage'
     start: '&a/sw start &e- &2Force starts a skywars match'
-    setstat: '&a/sw setstat &e[playername] [stat] [value] &e- &2Set a players stat value'
+    stat: '&a/sw stat &e[playername] [stat] [set/add/remove] [value] &e- &2Set a players stat value'
     setspawn: '&a/sw setspawn &e- &2Sets the spawn at your current location'
     reload: '&a/sw reload &e- &2Reloads SkyWars'
     clearstats: '&a/sw clearstats &e[playername] &e- &2Clears a SkyWars players stats'
@@ -464,6 +468,7 @@ helpList:
     save: '&a/swmap save &e[mapname] &e- &2Saves a open map named &e[mapname]'
     arenas: '&a/swmap arenas &e- &2Opens the Arenas GUI'
     spawn: '&a/swmap spawn [type] &e- &2Sets a spawn point for a arena. Type can be player, spec, or deathmatch'
+    chesttype: '&a/swmap chesttype &e- &2Toggles between the type of chest being placed (Normal or Center)'
   swkit:
     header1: '&7-----------------[&aKit Commands&7]-----------------'
     create: '&a/swkit create &e[kitname] &e- &2Create a kit using the items in your inventory'
