--- a/plugin/src/main/resources/config112.yml
+++ b/plugin/src/main/resources/config112.yml
@@ -13,6 +13,9 @@ displayPlayerLevelOnXpBar: true
 enabledLobbyGuard: false
 economyEnabled: false
 game:
+  worldBorder:
+    enabled: false
+    borderSize: 400
   showHealth: true
   snowballDamage: 1
   eggDamage: 1
