Started adding new events
-editable motd
-gameend command for bungeemode
-Shrinking Border Event added
-Projectiles Only Event Added
-Projectile Spleef Event Added

--- a/plugin/src/main/resources/config.yml
+++ b/plugin/src/main/resources/config.yml
@@ -2,6 +2,7 @@ debugMode: false
 spawn: null
 bungeeMode: false
 bungeeLobby: lobby
+gameEndCommands:
 tauntCooldown: 10
 enablePressurePlateJoin: true
 teleportToSpawnOnJoin: false
