--- a/plugin/src/main/resources/config18.yml
+++ b/plugin/src/main/resources/config18.yml
@@ -1,6 +1,7 @@
 debugMode: false
 bungeeMode: false
 bungeeLobby: lobby
+gameEndCommands:
 tauntCooldown: 10
 enablePressurePlateJoin: true
 teleportToSpawnOnJoin: false
