--- a/plugin/src/main/resources/config112.yml
+++ b/plugin/src/main/resources/config112.yml
@@ -2,6 +2,7 @@ debugMode: false
 spawn: null
 bungeeMode: false
 bungeeLobby: lobby
+gameEndCommands:
 tauntCooldown: 10
 enablePressurePlateJoin: true
 teleportToSpawnOnJoin: false
