--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -105,6 +105,11 @@
             <artifactId>skywarsreloaded-nms-interfaces</artifactId>
             <version>4.1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>me.ebonjaeger</groupId>
+            <artifactId>perworldinventory-kt</artifactId>
+            <version>2.2.1</version>
+        </dependency>
     </dependencies>
 
     <build>
