--- a/nms/pom.xml
+++ b/nms/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>com.walrusone.skywarsreloaded</groupId>
         <artifactId>skywarsreloaded-parent</artifactId>
-        <version>4.1.0-SNAPSHOT</version>
+        <version>4.1.1-Snapshot</version>
     </parent>
 
     <artifactId>skywarsreloaded-nms</artifactId>
