--- a/nms/v1_13_R2/pom.xml
+++ b/nms/v1_13_R2/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>com.walrusone.skywarsreloaded</groupId>
         <artifactId>skywarsreloaded-nms</artifactId>
-        <version>4.1.0-SNAPSHOT</version>
+        <version>4.1.1-Snapshot</version>
     </parent>
 
 	<artifactId>skywarsreloaded-nms-v1_13_r2</artifactId>
