--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>com.walrusone.skywarsreloaded</groupId>
         <artifactId>skywarsreloaded-parent</artifactId>
-        <version>4.1.0-SNAPSHOT</version>
+        <version>4.1.1-Snapshot</version>
     </parent>
 
     <artifactId>skywarsreloaded-plugin</artifactId>
@@ -103,7 +103,7 @@
         <dependency>
             <groupId>com.walrusone.skywarsreloaded</groupId>
             <artifactId>skywarsreloaded-nms-interfaces</artifactId>
-            <version>4.1.0-SNAPSHOT</version>
+            <version>4.1.1-Snapshot</version>
         </dependency>
         <dependency>
             <groupId>me.ebonjaeger</groupId>
